==> lijinlong21549/Sensor-collection/Example/STM32G0_BME280/Core/Src/BME280.c <==
#include "BME280.h"
#include "usart.h"
#include "i2c.h"

int BME280_IIC_Write(Sensor_BME280 *BME280, uint8_t ADDR, uint8_t DATA)
{
    uint8_t DATA_OUT[2] = {0};
    DATA_OUT[0] = ADDR;
    DATA_OUT[1] = DATA;
    if (HAL_I2C_Master_Transmit(&(BME280->IIC_Aisle), (BME280->IIC_ADDR) << 1, DATA_OUT, 2, 1000) != HAL_OK)
    {
        return BME280_Error;
    }
    return BME280_OK;
}

int BME280_IIC_Read(Sensor_BME280 *BME280, uint8_t ADDR, uint8_t *DATA, int DATA_NUM)
{
    if (HAL_I2C_Master_Transmit(&(BME280->IIC_Aisle), (BME280->IIC_ADDR) << 1, &ADDR, 1, 1000) != HAL_OK)
    {
        return BME280_Error;
    }
    if (HAL_I2C_Master_Receive(&(BME280->IIC_Aisle), (BME280->IIC_ADDR) << 1, DATA, DATA_NUM, 1000) != HAL_OK)
    {
        return BME280_Error;
    }
    return BME280_OK;
}
