==> EddieWu0410/openharmony_icar/hihope/HIHOPE-HH-SLHSP104/practice_demo/bme280/bme280.c <==
#include "bme280.h"

int BME280_IIC_Write(Sensor_BME280 *BME280, uint8_t ADDR, uint8_t DATA)
{
    i2c_status_type state;
    uint8_t DATA_OUT[2] = {0};
    DATA_OUT[0] = ADDR;
    DATA_OUT[1] = DATA;

    state = i2c_master_transmit(&(BME280->IIC_Aisle), ((BME280->IIC_ADDR) << 1 | 0x0), DATA_OUT, 2, 0xFFFF);
    if (state != I2C_OK)
    {
        printf(" i2c_master_transmit  error state:%d \n", state);

        // return BME280_Error;
    }

    return BME280_OK;
}

int BME280_IIC_Read(Sensor_BME280 *BME280, uint8_t ADDR, uint8_t *DATA, int DATA_NUM)
{
    i2c_status_type state;

    /* start the request reception process */
    state = i2c_master_transmit(&(BME280->IIC_Aisle), ((BME280->IIC_ADDR) << 1 | 0x0), &ADDR, 1, 0xFFFF);
    if (state != I2C_OK)
    {
        printf("BME280_IIC_Read  i2c_master_transmit error state:%d  \n", state);
        printf("BME280_IIC_Read state:%d \n", state);
        return BME280_Error;
    }
    if ((state = i2c_master_receive(&(BME280->IIC_Aisle), ((BME280->IIC_ADDR) << 1 | 0x0), DATA, DATA_NUM, 0xFFFF)) != I2C_OK)
    {
        printf("BME280_IIC_Read  i2c_master_receive error state:%d  \n", state);
        return BME280_Error;
    }
    
    return BME280_OK;
}
